infra/k8s/api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verolas-api
  labels:
    project: verolas
    component: api
